# file-intelligence

./: .gitignore  LICENSE  README.md  build-windows-installer.bat  build_installer.ps1  package-lock.json  package.json  vite.config.js
python-backend/: file_reader.py  indexer.py  main.py  requirements.txt  searcher.py
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
