[package]
name = "file-intelligence"
version = "1.0.0"
description = "File Intelligence — Local Semantic File Search"
authors = ["hagep"]
edition = "2021"

[lib]
name = "file_intelligence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "windef",
    "wingdi"
] }

raw-window-handle = "0.6"
